[package]
name = "cactusbot-rs"
version = "0.1.0"
authors = ["Will Eccles <will@eccles.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"

[dependencies.tokio]
version = "1.2.0"
features = ["macros", "signal", "rt-multi-thread"]
